k8s/canary/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: inference-svc-blue
spec:
  selector:
    app: inference
    version: blue
  ports:
  - port: 80
    targetPort: 8080
