k8s/canary/ingress-green-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inference-green-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: inference.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inference-svc-green
            port:
              number: 80
